# sge

./: .gitignore  .travis.yml  ci.sh  gen.py  license  readme.md  res.py
cmake/: CMakeLists.txt  examples.cmake  imgui.cmake  imguizmo.cmake  sge.cmake
contrib/: readme.md
contrib/imgui/: imgui.h  imgui_demo.cpp  imgui_draw.cpp
contrib/imguizmo/: ImGradient.h  ImGuizmo.cpp  ImGuizmo.h  ImSequencer.cpp  ImSequencer.h
examples/: readme.md
examples/ex00_vanilla/: readme.md  vanilla.cc  vanilla.comp  vanilla.cpp
examples/ex01_sinewaves/: readme.md  sinewaves.cc  sinewaves.comp  sinewaves.cpp
examples/ex02_juliaset/: juliaset.cc  juliaset.comp  juliaset.cpp  readme.md
examples/ex03_raymarching/: raymarching.cc  raymarching.comp  readme.md
examples/ex03_staticsdf/: free_camera.hpp  readme.md  staticsdf.cc  staticsdf.comp  staticsdf.cpp
examples/ex04_mandlebulb/: mandlebulb.cc  mandlebulb.comp  mandlebulb.cpp  readme.md
examples/ex05_csg/: csg.cc  csg.comp  readme.md  tree.hh
examples/ex05_dynamicsdf/: dynamicsdf.cc  dynamicsdf.comp  dynamicsdf.cpp  readme.md
examples/ex06_raytracing/: raytracing.cc  raytracing.comp
examples/ex_common/: free_camera.hh  free_camera.hpp
res/: sge_fullscreen_render.frag  sge_imgui.frag
src/: ext_freecam.hh  ext_gamepad.hh  ext_input.hh  ext_instrumentation.hh  ext_keyboard.hh  ext_mouse.hh  ext_overlay.hh  imgui_ext.cc  imgui_ext.hh  impl_linux.cc  impl_osx.mm  impl_win.cc  sge.h  sge.hh  sge_app.hh  sge_app.hpp  sge_app_interface.cc  sge_app_interface.hh  sge_core.cc  sge_core.cpp  sge_core.hh  sge_core.hpp  sge_data.hh  sge_ext_freecam.hh  sge_ext_gamepad.hh  sge_ext_gizmo.hh  sge_ext_instrumentation.hh  sge_ext_keyboard.hh  sge_ext_mouse.hh  sge_ext_overlay.hh  sge_ext_presentation.hh  sge_ext_tools.hh  sge_ext_toy.hh  sge_extensions.hh  sge_extensions.hpp  sge_fixed.hh  sge_impl_linux.cc  sge_impl_osx.mm  sge_impl_win.cc  sge_linux_main.cpp  (+62 more)
src/ext/: sge_ext_console.hh  sge_ext_freecam.hh  sge_ext_gamepad.hh  sge_ext_gizmo.hh  sge_ext_instrumentation.hh  sge_ext_keyboard.hh  sge_ext_mouse.hh  sge_ext_presentation.hh
